samples/_failures_safe/1761668684_db1f23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d883410e.c: In function ‘main’:
./samples/SAFE/__tmp_d883410e.c:179:5: error: expected declaration or statement at end of input
  179 |     size_t len = strcspn(input, "\n");
      |     ^~~~~~
